SITEWORK-257: Hide Top button on print view

--- a/resources/public/css/essentials.css
+++ b/resources/public/css/essentials.css
@@ -1333,6 +1333,7 @@ h3.titleGreyborder.inactive+ul.product-list {
     .popup-action-list-view,
     .owl-item,
     .owl-controls,
+    button#top-button
     .swatch-div,
     .sub-tab-wrap,
     ul.upholstery-types-list,
