--- a/resources/public/css/essentials.css
+++ b/resources/public/css/essentials.css
@@ -108,7 +108,7 @@
     margin-bottom: 10px;
 }
 
-.lead-time-list {
+.filter-list {
     padding-bottom: 40px;
     border-bottom: 1px solid #dddddd;
 }
@@ -237,6 +237,13 @@
     max-width: 100%;
 }
 
+.product-list .popup-modal img.brand-logo {
+	width: 35px;
+	margin-bottom: 7px;
+	opacity: .3 !important;
+	padding: 0 10px;
+}
+
 .lead-time-status li {
     width: 8px;
     height: 8px;
@@ -278,9 +285,7 @@
     flex-wrap: wrap;
 }
 
-.product-type-check h4,
-.product-type-check-list-all li,
-.header-filed label {
+.product-type-check h4 {
     font: 14px 'HelveticaNeueW01-55Roma', Arial, Helvetica, sans-serif;
     color: #464646;
     margin-bottom: 15px;
@@ -290,9 +295,8 @@
     text-transform: capitalize;
 }
 
-.header-filed input {
-    display: none;
-    opacity: 0;
+.product-type-check h4.has-selection {
+	font-weight: bold;
 }
 
 .product-type-check.has-filter-submenu h4:before,
@@ -336,22 +340,20 @@
     margin-bottom: 10px;
 }
 
-.product-type-check-list li {
+.filter-check-list li {
     font: 13px 'HelveticaNeueW01-65Medi', Arial, Helvetica, sans-serif;
     color: #4a4a4a;
     margin-bottom: 15px;
 }
 
-.product-type-check-list li input,
-.product-type-check-list-all li input {
+.filter-check-list li input {
     opacity: 0;
     visibility: hidden;
     position: absolute;
     margin: 0;
 }
 
-.product-type-check-list li label,
-.product-type-check-list-all li label {
+.filter-check-list li label {
     position: relative;
     color: #464646;
     margin: 0;
@@ -368,12 +370,7 @@
     font-family: 'HelveticaNeueW01-55Roma', Arial, Helvetica, sans-serif;
 }
 
-.product-type-check-list-all li label {
-    font-size: 14px;
-}
-
-.product-type-check-list li label:before,
-.product-type-check-list-all li label:before {
+.filter-check-list li label:before {
     content: '';
     position: absolute;
     left: 0;
@@ -388,15 +385,9 @@
     transition: all 0.5s;
 }
 
-.product-type-check-list li input:checked+label:before,
-.product-type-check-list-all li input:checked+label:before {
+.filter-check-list li input:checked+label:before {
     border-color: #a6a6a6;
     background-color: #636363;
-}
-
-.product-type-check-list-all li,
-.product-type-check-list-all {
-    padding-left: 0;
 }
 
 #essentials-modal {
@@ -917,9 +908,7 @@ ul.upholstery-types-list {
     display: none;
 }
 
-.product-type-check.disable-filter h4,
-.product-type-check.disable-filter label,
-.product-type-check-list li input.disable-filter+label {
+.filter-check-list li input.disable-filter+label {
     color: #ccc;
     pointer-events: none;
 }
@@ -942,7 +931,7 @@ li.has-sub-tab {
     margin-right: 0;
 }
 
-.disable-filter .product-type-check-list {
+.disable-filter .filter-check-list {
     display: none !important;
 }
 
@@ -971,10 +960,9 @@ p.reset-filter-link {
     top: 17px;
     cursor: pointer;
     font-size: 11px;
-    display: none;
 }
 
-ul.product-type-check-list {
+ul.filter-check-list {
     padding-right: 10px;
 }
 
@@ -1205,7 +1193,7 @@ h3.titleGreyborder.inactive+ul.product-list {
         width: 100%;
         float: none;
     }
-    .lead-time-list {
+    .filter-list {
         padding-bottom: 0;
         border-bottom: none;
     }
